<package>
  <name>sensor_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for sensor_description</p>
    <p>This package contains configuration data, 3D models and launch files
for armc_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="tan@todo.todo">tan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
    <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
   
  </export>
</package>
